--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -18,5 +18,5 @@ jobs:
         server: ftp.samkirkland.com
         username: ${{ secrets.ftp_username }}
         password: ${{ secrets.ftp_password }}
-       server-dir:/public_html/https://staging.mawulistephen.000webhostapp.com/
+       server-dir:/public_html/staging.mawulistephen.000webhostapp.com/
       
