--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -15,8 +15,8 @@ jobs:
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
-        server: ftp.samkirkland.com
+        server: ftp.files.000webhost.com
         username: ${{ secrets.ftp_username }}
         password: ${{ secrets.ftp_password }}
-       server-dir:/public_html/staging.mawulistephen.000webhostapp.com/
+      #  server-dir:/public_html/staging.mawulistephen.000webhostapp.com/
       
