--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -18,4 +18,4 @@ jobs:
         server: ftp.files.000webhost.com
         username: ${{ secrets.ftp_username }}
         password: ${{ secrets.ftp_password }}
-        server-dir:/public_html/production.mawulistephen.000webhostapp.com/
+        server-dir:/public_html/mawulistephen.000webhostapp.com/
